--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,4 @@ yarn-error.log
 /.idea
 /.vscode
 
-/public/upload/banner-mbimg
-/public/upload/banner-pcimg
-/public/upload/products-img
-/public/upload/media-video
-/public/upload/blog_news
-/public/upload/country-img
-/public/upload/social-mainimg
-/public/upload/social-userimg
+/public/upload
